# trust-layer

./: .gitignore  .replit  CHRONICLES_VISION.md  COPILOT_CANONICAL_HANDOFF.md  ECOSYSTEM.md  EMAIL_VERIFICATION_HANDOFF.md  HANDOFF_TO_OTHER_AGENT.md  PWA-CATALOG.md  PWA-DESCRIPTIONS-FOR-CATALOG.md  README.md  SPRINT_REWARDS_HANDOFF.md  TLID_DOMAINS.md  TLID_INTEGRATION.md  TOKENOMICS_REFERENCE.md  TRUST_LAYER_AGENT_HANDOFF.md  VERDARA_HANDOFF.md  VERDARA_RETURN_HANDOFF.md  facebook-bios.txt  facebook-welcome-post.txt  package-lock.json  package.json  replit.md  tmp_description.txt  trust-layer-x-bio.txt
.upm/: store.json
attached_assets/: PULSE_TECHNICAL_HANDOFF_1768819123227.md  Pasted---1767496659265_1767496659266.txt  Pasted--Create-a-scaffold-build-for-the-Backend-IDE-prototype-_1767164738836.txt  Pasted--DARKWAVE-CHAIN--1766518481979_1766518481980.txt  Pasted--DARKWAVE-CHAIN--1766519338863_1766519338864.txt  Pasted--DARKWAVE-CHAIN-INT-1766299814324_1766299814326.txt  Pasted--DARKWAVE-TEAM-HU-1766512952680_1766512952682.txt  Pasted--DARKWAVE-TEAM-HU-1766517727425_1766517727426.txt  Pasted--DWTL-IO-TRUST-LAYER-GATEWAY-ORBIT-ECOSYSTEM-INTEGRATIO_1769747013335.txt  Pasted--FULL-SYSTEM-AUDIT-VERIFICATION-HANDOFF-Copy-Ready-Obje_1769935767207.txt  Pasted--HANDOFF-PULSE-DA-1766562911040_1766562911046.txt  Pasted--ORBIT-CHAIN-DAR-1766283642477_1766283642479.txt  Pasted--PULSE-API--1766817470956_1766817470957.txt  Pasted--TRUST-LAYER-SSO-SIGNAL-CHAT-HANDOFF-From-DarkWave-Stud_1770367569129.txt  Pasted--TRUSTGEN-3D-App-Catalog-Entry--1772742747128_1772742747130.txt  Pasted--TRUSTVAULT-BLOCKCHAIN-INTEGRATION-HANDOFF-From-DW-Medi_1771448404243.txt  Pasted--client-src-components-bridge-BridgeInterface-tsx-impor_1767165740590.txt  Pasted--client-src-components-chat-ChannelSettings-tsx-import-_1767168009745.txt  Pasted--client-src-components-chat-CommunityList-tsx-import-Re_1767167886924.txt  Pasted--client-src-components-chat-CommunityList-tsx-import-Re_1767169217907.txt  Pasted--client-src-components-chat-CommunitySettings-tsx-impor_1767167930365.txt  Pasted--client-src-components-chat-CreateChannelModal-tsx-impo_1767168024042.txt  (+70 more)
blockchain/: Cargo.toml
blockchain/data/: db  snap.0000000000003991  snap.0000000000005EA4
blockchain/src/: consensus.rs  crypto.rs  ledger.rs  lib.rs  main.rs  node.rs  rpc.rs  types.rs
client/: index.html
contracts/solana/programs/wdwt-bridge/: Cargo.toml
contracts/solana/programs/wdwt-bridge/src/: lib.rs
docs/: ALPHA_ROADMAP.md  (+21 more)
(+491 files in other folders)
