[package]
name = "orbit-chain"
version = "0.1.0"
edition = "2021"
description = "Orbit Chain - A fast, secure blockchain with chain abstraction technology"
authors = ["Orbit Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Storage
sled = "0.34"

# Networking & RPC
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
