[package]
name = "wdwt-bridge"
version = "1.0.0"
description = "Wrapped DarkWave Token Bridge Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wdwt_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
